--- a/proj2/routedash/package.json
+++ b/proj2/routedash/package.json
@@ -9,7 +9,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "eslint ./src --ext ts,tsx --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
@@ -38,8 +41,10 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~18.3.3",
     "@types/react-native": "~0.73.0",
+    "@vitest/coverage-v8": "^1.6.1",
     "eslint": "^8.57.0",
     "prettier": "2.8.8",
-    "typescript": "~5.4.5"
+    "typescript": "~5.4.5",
+    "vitest": "^1.6.1"
   }
 }
